WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314918
"Reveal password" button in schwab.com login field is misplaced
https://bugs.webkit.org/show_bug.cgi?id=314918
Summary
"Reveal password" button in schwab.com login field is misplaced
alan
Reported
2026-05-15 14:45:09 PDT
<
rdar://177181803
>
Attachments
[fast-cq]Patch
(13.67 KB, patch)
2026-05-15 14:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-15 14:54:12 PDT
Created
attachment 479683
[details]
[fast-cq]Patch
EWS
Comment 2
2026-05-16 10:03:06 PDT
Committed
313364@main
(6246be93facf): <
https://commits.webkit.org/313364@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479683
[details]
.
Sammy Gill
Comment 3
2026-05-21 10:36:53 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/60078
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug