"Reveal password" button in schwab.com login field is misplaced https://bugs.webkit.org/show_bug.cgi?id=314918 rdar://177181803

Reviewed by Antti Koivisto.

   <div style="position: relative">
       x<div style="position: absolute; height: 100%">
           <div style="position: relative; top: 100%">green</div>
       </div>
   </div>

The green box should be one line below "x". Instead it sat on top of it.

When the inner relpos resolves "top: 100%", the post-layout fast path
added in 311908@main walks up from the absolute box looking for a
definite-height ancestor, sees "height: auto" on the outer relative
div, and answers "not definite", so the percentage falls back to zero.
But the absolute box itself has "height: 100%", and an out-of-flow
containing block always gets computed used dimensions regardless of an
ancestor's style. The slow path bailed early for out-of-flow in
containingBlockForAutoHeightDetection; the fast path missed it.

Treat an out-of-flow containing block with a non-auto height (percent
or stretch) as definite in hasDefiniteHeightByStyle, matching the slow
path's out-of-flow early-bail.

* LayoutTests/imported/w3c/web-platform-tests/css/css-position/position-relative-016-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-position/position-relative-016.html: Added.
* Source/WebCore/rendering/RenderBoxModelObject.cpp:
(WebCore::hasDefiniteHeightByStyle):

Canonical link: https://commits.webkit.org/313364@main